CORE-1207 - Fixed animation effect for container collapse. Fixed a bug that was hiding group's children.

--- a/runtime/css/containers.less
+++ b/runtime/css/containers.less
@@ -59,7 +59,6 @@ body {
     }
 
     .mw-container {
-        overflow: hidden;
         margin-bottom: @container-margin;
     }
 
@@ -136,6 +135,10 @@ body {
         margin-top: -0.5em;
         margin-right: 0.6em;
         vertical-align: middle;
+    }
+
+    .collapsed-container {
+        overflow: hidden;
     }
 
 }
